Use KIO::JobUiDelegate for opening other application

KNotificationJobUiDelegate cannot open an 'Open With' dialog which is what we need here. Instead use the KIO delegate that can

BUG: 445530